# xGIS

./: .gitignore  README.md  __init__.py  arcpy_extender_toolbox.Extender.pyt.xml  arcpy_extender_toolbox.pyt  arcpy_extender_toolbox.pyt.xml  core.py  example_requirements.yml  license.txt  setup.cfg  setup.py  setup_external_libs.py
build_utils/: Build_installer.py  build_config.yaml  config_template.txt  create_certificate.py  create_certificate.yaml  setup.bat
core/: ARClogger.py  __init__.py  arctoolbox.py  executor.py  log_utils.py
example/: Example_toolbox.pyt  README.md  awesome_script.py
scripts/: getpip.py  setup_external_libs.py
