[metadata]
name = arcpy_extender
version = attr: core.version
url = https://github.com/alessioarena/arcpy_extender
author = Alessio Arena
author_email = alessio.arena@csiro.au
description = a module that helps running subprocess calls from within your arcpy, extending what you can achieve with ArcGIS
long_description = file: README.md
keyword = arcpy, subprocess
classifiers = 
    Programming Language :: Python :: 2
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
license_file = license.txt

[options]
zip_safe = False
packages = arcpy_extender
package_dir = 
    arcpy_extender = core
scripts = scripts\setup_external_libs.py, scripts\getpip.py

[options.package_data]
arcpy_extender = *.yml