[metadata]
name = arcpy_extender
version = attr: core._version.__version__
url = https://github.com/alessioarena/arcpy_extender
author = Alessio Arena
author_email = alessio.arena@csiro.au
description = a module that helps running subprocess calls from within your arcpy, extending what you can achieve with ArcGIS
long_description = file: README.md
keyword = arcpy, subprocess
classifiers = 
    Programming Language :: Python :: 2
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
license_file = license.txt

[options]
zip_safe = False
include_package_data = True
packages = arcpy_extender, arcpy_extender/example
package_dir = 
    arcpy_extender = core
    arcpy_extender/example = example
scripts = scripts/setup_external_libs.py, scripts/getpip.py

[options.data_files]
arcpy_extender_toolbox = arcpy_extender_toolbox.pyt, arcpy_extender_toolbox.pyt.xml, arcpy_extender_toolbox.Extender.pyt.xml