[metadata]
name = xgis
version = attr: core._version.__version__
url = https://github.com/alessioarena/xGIS
author = Alessio Arena
author_email = alessio.arena@csiro.au
description = a module that helps running subprocess calls from within arcpy and pyqgis, helping you using brand new standard Python environments
long_description = file: README.md
keyword = arcpy, pyqgis, subprocess
classifiers = 
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: GIS
license_file = license.txt

[options]
zip_safe = False
include_package_data = True
packages = xgis, xgis/example
package_dir = 
    xgis = core
    xgis/example = example
scripts = scripts/setup_external_libs.py, scripts/getpip.py

[options.data_files]
xGIS_toolbox = xGIS_toolbox.pyt, xGIS_toolbox.pyt.xml, xGIS_toolbox.Extender.pyt.xml